# calimove-old

./: .env  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/src/: main.py
frontend/: README.md  package.json
frontend/src/pages/: IndexPage.vue
