[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Maximilian Girlich <maximilian.girlich@metoda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
